force-app/main/default/objects/Study_Grade_Period_Setting__c/Study_Grade_Period_Setting__c.object-meta.xml
<CustomObject>
    <description>Control the period of entering grades for an academic term.</description>
    <label>Study Grade Period Setting</label>
    <nameField>
        <label>Study Grade Period Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Grade Period Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>