force-app/main/default/objects/Study_Grade_Period_Setting__c/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Term</label>
    <referenceTo>Study_Term__c</referenceTo>
    <relationshipLabel>Study Grade Period Settings</relationshipLabel>
    <relationshipName>Study_Grade_Period_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>