force-app/main/default/objects/Study_Grade_Period_Setting__c/fields/Locking_Mode__c.field-meta.xml
<CustomField>
    <fullName>Locking_Mode__c</fullName>
    <formula>IF(
  ISBLANK(TEXT(Locking_Mode_Override__c)),
  IF(
    AND(TODAY() &gt;= Start_Date__c, TODAY() &lt;= End_Date__c),
    &quot;Unlocked&quot;,
    &quot;Locked&quot;
  ),
  TEXT(Locking_Mode_Override__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locking Mode</label>
    <type>Text</type>
</CustomField>