force-app/main/default/objects/Study_Grade_Period_Setting__c/fields/Locking_Mode_Override__c.field-meta.xml
<CustomField>
    <fullName>Locking_Mode_Override__c</fullName>
    <label>Locking Mode (Override)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locking_Mode</valueSetName>
    </valueSet>
</CustomField>