force-app/main/default/objects/Study_Grade_Period_Setting__c/fields/Study_Offering__c.field-meta.xml
<CustomField>
    <fullName>Study_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Offering</label>
    <referenceTo>Study_Offering__c</referenceTo>
    <relationshipLabel>Study Grade Period Settings</relationshipLabel>
    <relationshipName>Study_Grade_Period_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>