force-app/main/default/objects/Study_Grade_Period_Setting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grading_Period_Types</valueSetName>
    </valueSet>
</CustomField>